# cfb-edge-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ROOT_ORGANIZATION_COMPLETE.md  cursor.md  env.example  pyproject.toml  test.env
analysis/: README.md
archive/: test.env
data/: advanced_ensemble_model_features.csv  advanced_ensemble_selected_features.csv  advanced_team_stats_2024.csv  all_season_games_2022_2024.csv  comprehensive_model_features.csv  current_games_2025.csv  current_rankings_2025.csv  current_team_stats_2025.csv  current_vegas_odds.csv  current_win_probabilities_2025.csv  current_year_model_features.csv  current_year_performance_2025.csv  current_year_selected_features.csv  enhanced_weekly_performance.csv  ml_predictions_2024.csv  opponent_trends_prediction.csv  player_stats_2024.csv  player_usage_2024.csv  processed_vegas_odds.csv  team_ppa_stats_2024.csv  team_stats_2024.csv  team_talent_2024.csv  team_transfer_stats_2024.csv  team_usage_stats_2024.csv  team_weekly_performance.csv  tennessee_2025_predictions_actual_schedule.csv  tennessee_2025_predictions_advanced_ensemble.csv  tennessee_2025_predictions_comprehensive.csv  tennessee_2025_predictions_current_year.csv  tennessee_2025_predictions_enhanced.csv  tennessee_2025_predictions_final.csv  tennessee_complete_2022_2024.csv  tennessee_games_2024.csv  tennessee_games_2024_actual.csv  tennessee_games_2024_processed.csv  tennessee_games_2025_actual.csv  tennessee_games_2025_mock.csv  tennessee_games_2025_processed_actual.csv  tennessee_games_combined_2022_2024.csv  tennessee_games_combined_2022_2024_clean.csv  (+14 more)
documentation/: ORGANIZATION_COMPLETE.md  (+2 more)
(+73 files in other folders)
